# onnx_peek

./: CMakeLists.txt  README.md
include/: onnx.pb.h  onnx_loader.h
proto/: onnx.pb.cc  onnx.proto
src/: CMakeLists.txt  generate.cxx
