
INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED COMPONENTS protobuf)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})

message(WARNING "PRTOBUF_INCLUDE_DIR is ${PROTOBUF_INCLUDE_DIR}")
message(WARNING "proto_src is ${PROTO_SRC}")
message(WARNING "proto_header is ${PROTO_HEADER}")
message(WARNING "prot buf library is ${Protobuf_LIBRARIES}")
message(WARNING "Protobuf_PROTOC_LIBRARIES is ${Protobuf_PROTOC_LIBRARIES}")



#PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER onnx.proto)
#ADD_LIBRARY(PROTO ${PROTO_HEADER} ${PROTO_SRC})

